<resources>
    <string name="app_name">ЖД Станции</string>
    <string name="image_msg_not_found">​​Изображения для станции не найдены</string>
    <string name="favourite_image_msg_not_found">Добавьте изображения в избранное</string>
    <string name="searchview_search">Поиск станции</string>
    <string name="action_favourite">Избранное</string>
    <string name="action_mode_favourite">Добавить в избранное</string>
    <string name="action_mode_favourite_delete">Удалить из избранного</string>
    <string name="action_mode_download">Скачать</string>
    <string name="action_mode_share">Поделиться</string>
    <string name="all_image_loaded">Загрузка успешно завершена</string>
    <string name="error_load_image">Ошибка во время загрузки изображений</string>
    <string name="not_internet_connection">Отсутствует интернет соединение</string>
    <string name="need_permission">Для выполнения действия необходимо разрешение</string>
    <string name="request_add_image">Добавьте изображения в избранное</string>
    <string name="favourite">Избранное</string>
    <string name="request_turn_on_gps">Пожалуйста, включите GPS</string>
    <string name="error_turn_on_gps">Ошибка во время включения GPS</string>
    <string name="action_column_count">Количество колонок</string>
    <string name="action_image_quality_bad">Низкое качество</string>
    <string name="action_image_quality_good">Высокое качество</string>
</resources>